--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="application-name" content="Color Lottery">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#ffffff">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/main.css" />
 
