improved font loading

--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,10 @@
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link  rel="preload" href="assets/font/PTMono-Regular.woff2" as="font" type="font/woff2" crossorigin />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/main.css" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet" />
     <title>Ragilab Color Lottery</title>
   </head>
   <body>
