--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Join this decentralized and transparent color lottery on a substrate blockchain." />
     <link  rel="preload" href="assets/font/PTMono-Regular.woff2" as="font" type="font/woff2" crossorigin />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
